assignment2/src/main/CSlang/parser/.antlr/CSlangParser.py
# Generated from d://Assignment//cslang-initial//src//main//CSlang//parser//CSlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'break'", "'continue'", 
                     "'if'", "'else'", "'for'", "'true'", "'false'", "'int'", 
                     "'float'", "'bool'", "'string'", "'return'", "'null'", 
                     "'class'", "'constructor'", "'var'", "'self'", "'new'", 
                     "'void'", "'const'", "'func'", "'&&'", "'||'", "'=='", 
                     "':='", "'!='", "'<'", "'>'", "'<='", "'>='", "'<-'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'!'", "'='", "'^'", 
                     "'%'", "','", "';'", "':'", "'.'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "Attribute_name", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "FOR", "TRUE", "FALSE", "INT", "FLOAT", 
                      "BOOL", "STRING", "RETURN", "NULL", "CLASS", "CONSTRUCTOR", 
                      "VAR", "SELF", "NEW", "VOID", "CONST", "FUNC", "AND", 
                      "OR", "EQUAL", "ASSIGN", "NOT_EQUAL", "LESS_THAN", 
                      "GREATER_THAN", "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", 
                      "SUPERCLASS", "ADD", "SUB", "MUL", "DIV_FLOAT", "DIV_INT", 
                      "NOT", "EQ", "STRING_CONCAT", "MOD", "COMMA", "SEMI", 
                      "COLON", "DOT", "LP", "RP", "LSB", "RSB", "LB", "RB", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS", "INTARR", "INTLIT", 
                      "FLOATLIT", "STRINGLIT", "ID", "STATIC_ID", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_declarelist = 1
    RULE_class_declare = 2
    RULE_name_class = 3
    RULE_name_superclass = 4
    RULE_body_class_list = 5
    RULE_body_class_prime = 6
    RULE_body_class = 7
    RULE_attribute_declare = 8
    RULE_attdecl_ = 9
    RULE_indenlist = 10
    RULE_attdecl = 11
    RULE_varlist = 12
    RULE_type_att = 13
    RULE_primitive_type = 14
    RULE_primitive_type_ = 15
    RULE_array_type = 16
    RULE_element_type = 17
    RULE_class_type = 18
    RULE_method_declare = 19
    RULE_paramlist = 20
    RULE_paramprime = 21
    RULE_param = 22
    RULE_idlist = 23
    RULE_type_return = 24
    RULE_constructor_declare = 25
    RULE_blockstmt = 26
    RULE_stmtlist = 27
    RULE_stmtprime = 28
    RULE_stmt = 29
    RULE_stmt1 = 30
    RULE_var_and_const_declstmt = 31
    RULE_varstmt_decl = 32
    RULE_variable_namelist = 33
    RULE_varstmt_declass = 34
    RULE_varstmt_list = 35
    RULE_assignment_stmt = 36
    RULE_assign_lhs = 37
    RULE_index_exp_for_scalar_variable = 38
    RULE_if_stmt = 39
    RULE_assignstmt = 40
    RULE_for_stmt = 41
    RULE_break_stmt = 42
    RULE_continue_stmt = 43
    RULE_return_stmt = 44
    RULE_method_invocation_stmt = 45
    RULE_method_invocation = 46
    RULE_static_method_invocation = 47
    RULE_name_class_access = 48
    RULE_instance_method_invocation = 49
    RULE_pre_exp = 50
    RULE_expr = 51
    RULE_expr1 = 52
    RULE_expr2 = 53
    RULE_expr3 = 54
    RULE_expr4 = 55
    RULE_expr5 = 56
    RULE_expr6 = 57
    RULE_expr7 = 58
    RULE_expr8 = 59
    RULE_expr9 = 60
    RULE_expr10 = 61
    RULE_funcall = 62
    RULE_static_funcall = 63
    RULE_operands = 64
    RULE_literals = 65
    RULE_literal_array = 66
    RULE_boolean_literal = 67
    RULE_array_literal = 68
    RULE_litarray_list = 69
    RULE_exp_list = 70
    RULE_index_operator = 71
    RULE_identifier_name = 72

    ruleNames =  [ "program", "class_declarelist", "class_declare", "name_class", 
                   "name_superclass", "body_class_list", "body_class_prime", 
                   "body_class", "attribute_declare", "attdecl_", "indenlist", 
                   "attdecl", "varlist", "type_att", "primitive_type", "primitive_type_", 
                   "array_type", "element_type", "class_type", "method_declare", 
                   "paramlist", "paramprime", "param", "idlist", "type_return", 
                   "constructor_declare", "blockstmt", "stmtlist", "stmtprime", 
                   "stmt", "stmt1", "var_and_const_declstmt", "varstmt_decl", 
                   "variable_namelist", "varstmt_declass", "varstmt_list", 
                   "assignment_stmt", "assign_lhs", "index_exp_for_scalar_variable", 
                   "if_stmt", "assignstmt", "for_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_invocation_stmt", "method_invocation", 
                   "static_method_invocation", "name_class_access", "instance_method_invocation", 
                   "pre_exp", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "expr9", "expr10", 
                   "funcall", "static_funcall", "operands", "literals", 
                   "literal_array", "boolean_literal", "array_literal", 
                   "litarray_list", "exp_list", "index_operator", "identifier_name" ]

    EOF = Token.EOF
    Attribute_name=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSE=5
    FOR=6
    TRUE=7
    FALSE=8
    INT=9
    FLOAT=10
    BOOL=11
    STRING=12
    RETURN=13
    NULL=14
    CLASS=15
    CONSTRUCTOR=16
    VAR=17
    SELF=18
    NEW=19
    VOID=20
    CONST=21
    FUNC=22
    AND=23
    OR=24
    EQUAL=25
    ASSIGN=26
    NOT_EQUAL=27
    LESS_THAN=28
    GREATER_THAN=29
    LESS_THAN_EQUAL=30
    GREATER_THAN_EQUAL=31
    SUPERCLASS=32
    ADD=33
    SUB=34
    MUL=35
    DIV_FLOAT=36
    DIV_INT=37
    NOT=38
    EQ=39
    STRING_CONCAT=40
    MOD=41
    COMMA=42
    SEMI=43
    COLON=44
    DOT=45
    LP=46
    RP=47
    LSB=48
    RSB=49
    LB=50
    RB=51
    LINE_COMMENT=52
    BLOCK_COMMENT=53
    WS=54
    INTARR=55
    INTLIT=56
    FLOATLIT=57
    STRINGLIT=58
    ID=59
    STATIC_ID=60
    ERROR_CHAR=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.class_declarelist()
            self.state = 147
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(CSlangParser.Class_declareContext,0)


        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_declarelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declarelist" ):
                listener.enterClass_declarelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declarelist" ):
                listener.exitClass_declarelist(self)




    def class_declarelist(self):

        localctx = CSlangParser.Class_declarelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declarelist)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.class_declare()
                self.state = 150
                self.class_declarelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.class_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def name_superclass(self):
            return self.getTypedRuleContext(CSlangParser.Name_superclassContext,0)


        def name_class(self):
            return self.getTypedRuleContext(CSlangParser.Name_classContext,0)


        def LB(self):
            return self.getToken(CSlangParser.LB, 0)

        def body_class_list(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_listContext,0)


        def RB(self):
            return self.getToken(CSlangParser.RB, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_class_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declare" ):
                listener.enterClass_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declare" ):
                listener.exitClass_declare(self)




    def class_declare(self):

        localctx = CSlangParser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(CSlangParser.CLASS)
            self.state = 156
            self.name_superclass()
            self.state = 157
            self.name_class()
            self.state = 158
            self.match(CSlangParser.LB)
            self.state = 159
            self.body_class_list()
            self.state = 160
            self.match(CSlangParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_name_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_class" ):
                listener.enterName_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_class" ):
                listener.exitName_class(self)




    def name_class(self):

        localctx = CSlangParser.Name_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CSlangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_superclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def SUPERCLASS(self):
            return self.getToken(CSlangParser.SUPERCLASS, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_name_superclass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_superclass" ):
                listener.enterName_superclass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_superclass" ):
                listener.exitName_superclass(self)




    def name_superclass(self):

        localctx = CSlangParser.Name_superclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_name_superclass)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(CSlangParser.ID)
                self.state = 165
                self.match(CSlangParser.SUPERCLASS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_class_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_class_prime(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_primeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_class_list" ):
                listener.enterBody_class_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_class_list" ):
                listener.exitBody_class_list(self)




    def body_class_list(self):

        localctx = CSlangParser.Body_class_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body_class_list)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.body_class_prime()
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_class_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_class(self):
            return self.getTypedRuleContext(CSlangParser.Body_classContext,0)


        def body_class_prime(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_primeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_class_prime" ):
                listener.enterBody_class_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_class_prime" ):
                listener.exitBody_class_prime(self)




    def body_class_prime(self):

        localctx = CSlangParser.Body_class_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body_class_prime)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.body_class()
                self.state = 174
                self.body_class_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.body_class()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(CSlangParser.Method_declareContext,0)


        def constructor_declare(self):
            return self.getTypedRuleContext(CSlangParser.Constructor_declareContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_class" ):
                listener.enterBody_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_class" ):
                listener.exitBody_class(self)




    def body_class(self):

        localctx = CSlangParser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body_class)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.attribute_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.method_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.constructor_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attdecl_(self):
            return self.getTypedRuleContext(CSlangParser.Attdecl_Context,0)


        def attdecl(self):
            return self.getTypedRuleContext(CSlangParser.AttdeclContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_declare" ):
                listener.enterAttribute_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_declare" ):
                listener.exitAttribute_declare(self)




    def attribute_declare(self):

        localctx = CSlangParser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_declare)
        try:
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.attdecl_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.attdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attdecl_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Attribute_name(self):
            return self.getToken(CSlangParser.Attribute_name, 0)

        def indenlist(self):
            return self.getTypedRuleContext(CSlangParser.IndenlistContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def type_att(self):
            return self.getTypedRuleContext(CSlangParser.Type_attContext,0)


        def SEMI(self):
            return self.getToken(CSlangParser.SEMI, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attdecl_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttdecl_" ):
                listener.enterAttdecl_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttdecl_" ):
                listener.exitAttdecl_(self)




    def attdecl_(self):

        localctx = CSlangParser.Attdecl_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attdecl_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(CSlangParser.Attribute_name)
            self.state = 189
            self.indenlist()
            self.state = 190
            self.match(CSlangParser.COLON)
            self.state = 191
            self.type_att()
            self.state = 192
            self.match(CSlangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndenlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def COMMA(self):
            return self.getToken(CSlangParser.COMMA, 0)

        def indenlist(self):
            return self.getTypedRuleContext(CSlangParser.IndenlistContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_indenlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndenlist" ):
                listener.enterIndenlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndenlist" ):
                listener.exitIndenlist(self)




    def indenlist(self):

        localctx = CSlangParser.IndenlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_indenlist)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.identifier_name()
                self.state = 195
                self.match(CSlangParser.COMMA)
                self.state = 196
                self.indenlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 198
                self.identifier_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Attribute_name(self):
            return self.getToken(CSlangParser.Attribute_name, 0)

        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(CSlangParser.VarlistContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(CSlangParser.SEMI, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttdecl" ):
                listener.enterAttdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttdecl" ):
                listener.exitAttdecl(self)




    def attdecl(self):

        localctx = CSlangParser.AttdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(CSlangParser.Attribute_name)
            self.state = 202
            self.identifier_name()
            self.state = 203
            self.varlist()
            self.state = 204
            self.expr()
            self.state = 205
            self.match(CSlangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(CSlangParser.VarlistContext,0)

